<resources>
    <string name="app_name">Messenger</string>
    <string name="message">Message</string>
    <string name="time">time</string>
    <string name="title_activity_messager_home">MessengerHome</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="messages">Messages</string>
    <string name="status">Status</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="video_call">Video Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="share_contact">Share Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="block_chat">Block Chat</string>
    <string name="otp_dialog">Please, enter 4-digit code we sent on your number as SMS.</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="phone_number">Phone Number</string>
</resources>