<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/video_call_button"
        android:icon="@drawable/ic_video_call_24"
        android:title="@string/video_call"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/voice_call_button"
        android:icon="@drawable/ic_add_ic_call_24"
        android:title="@string/voice_call"
        app:showAsAction="always" />
    <item
        android:id="@+id/share_contact"
        android:title="@string/share_contact" />
    <item
        android:id="@+id/delete_contact"
        android:title="@string/delete_contact" />
    <item
        android:id="@+id/clear_chat"
        android:title="@string/clear_chat" />
    <item
        android:id="@+id/block_chat"
        android:title="@string/block_chat" />
</menu>