<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:paddingTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-75dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/user_profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/user_profile_pic_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/chat_message_count_background"
            android:backgroundTint="@color/messageTint"
            android:padding="5dp"
            android:src="@drawable/ic_camera_24"
            app:layout_constraintBottom_toBottomOf="@+id/user_profile_pic"
            app:layout_constraintEnd_toEndOf="@+id/user_profile_pic"
            app:shapeAppearanceOverlay="@style/circleImageView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/total_friends_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/teal_700"
            android:drawableStart="@drawable/ic_people_24"
            android:padding="5dp"
            android:layout_margin="20dp"
            android:text="0"
            android:textColor="@color/teal_200"
            app:layout_constraintEnd_toStartOf="@+id/msgr_friends_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_profile_pic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/msgr_friends_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/teal_700"
            android:drawableStart="@drawable/ic_emoji_people_24"
            android:padding="5dp"
            android:text="0"
            android:layout_margin="20dp"
            android:textColor="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="@+id/total_friends_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/total_friends_button"
            app:layout_constraintStart_toEndOf="@id/total_friends_button"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:text="ID:1235823434"
            app:layout_constraintTop_toBottomOf="@id/total_friends_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_view">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toStartOf="@+id/edit_profile_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_profile_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/edit_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_edit_32"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="@+id/profile_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_about"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/about"
            app:layout_constraintEnd_toStartOf="@+id/edit_profile_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_name"
            app:startIconDrawable="@drawable/ic_info_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/edit_profile_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_edit_32"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="@+id/profile_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_about" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:hint="@string/phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_about"
            app:startIconDrawable="@drawable/ic_call_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/green"
            android:drawableEnd="@drawable/ic_next_24"
            android:paddingHorizontal="20dp"
            android:text="Log Out"
            android:id="@+id/next_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/phone_number_input_layout"
            app:layout_constraintStart_toStartOf="@+id/phone_number_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_input_layout"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>